--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="shooting-star">
         <div id="pt" class="canvas"></div>
 
-        <a href="#footer" id="view" class="button-color-turquoise page-link text-center">WELCOME</a>
+        <a href="#home" id="view" class="button-color-turquoise page-link text-center">WELCOME</a>
     </section>
 
     <section id="home" name="home">
