--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <section id="shooting-star">
         <div id="pt" class="canvas"></div>
 
-        <a href="#home" id="view" class="button-color-turquoise page-link text-center">WELCOME</a>
+        <div class="button page-link">
+            WELCOME
+        </div>
     </section>
 
     <section id="home" name="home">
