--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
         <div class="loader"></div>
     </div>
 
-    <section id="shooting-star">
+    <section id="shooting-star" class="flex">
         <div id="pt" class="canvas"></div>
 
-        <div class="button page-link">
-            WELCOME
+        <div cass="flex">
+            <div class="button page-link">
+                WELCOME TO MY PORTFOLIO
+            </div>
         </div>
     </section>
 
