--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div cass="flex">
             <div class="button page-link">
-                WELCOME TO MY PORTFOLIO
+                WELCOME TO MY WEBSITE
             </div>
         </div>
     </section>
