--- a/index.html
+++ b/index.html
@@ -59,20 +59,31 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <div class="page-link nav-link" destination="home">
+              <div class="page-link nav-link cursor-pointer" destination="home">
                 Home<span class="sr-only">(current)</span>
               </div>
             </li>
             <li class="nav-item">
-              <div class="page-link nav-link" destination="about">About</div>
+              <div
+                class="page-link nav-link cursor-pointer"
+                destination="about"
+              >
+                About
+              </div>
             </li>
             <li class="nav-item">
-              <div class="page-link nav-link" destination="portfolio">
+              <div
+                class="page-link nav-link cursor-pointer"
+                destination="portfolio"
+              >
                 Portfolio
               </div>
             </li>
             <li class="nav-item">
-              <div class="page-link nav-link" destination="contact">
+              <div
+                class="page-link nav-link cursor-pointer"
+                destination="contact"
+              >
                 Contact
               </div>
             </li>
@@ -104,7 +115,7 @@
               </p>
               <div
                 id="contact-me"
-                class="page-link button-color-turquoise"
+                class="page-link button-color-turquoise cursor-pointer"
                 destination="contact"
               >
                 CONTACT ME
