--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="shooting-star" class="flex">
       <div id="pt" class="canvas"></div>
 
-      <div cass="flex">
+      <div cass="flex height-fix">
         <div class="button page-link" destination="home">
           WELCOME TO MY WEBSITE
         </div>
