--- a/index.html
+++ b/index.html
@@ -43,51 +43,56 @@
 
     <section id="home" name="home">
       <nav class="navbar navbar-expand-lg navbar-light">
-        <span class="navbar-brand h1">ThinkIT</span>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <div class="nav-wrap">
+          <span class="navbar-brand h1">ThinkIT</span>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <div class="page-link nav-link cursor-pointer" destination="home">
-                Home<span class="sr-only">(current)</span>
-              </div>
-            </li>
-            <li class="nav-item">
-              <div
-                class="page-link nav-link cursor-pointer"
-                destination="about"
-              >
-                About
-              </div>
-            </li>
-            <li class="nav-item">
-              <div
-                class="page-link nav-link cursor-pointer"
-                destination="portfolio"
-              >
-                Portfolio
-              </div>
-            </li>
-            <li class="nav-item">
-              <div
-                class="page-link nav-link cursor-pointer"
-                destination="contact"
-              >
-                Contact
-              </div>
-            </li>
-          </ul>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <div
+                  class="page-link nav-link cursor-pointer"
+                  destination="home"
+                >
+                  Home<span class="sr-only">(current)</span>
+                </div>
+              </li>
+              <li class="nav-item">
+                <div
+                  class="page-link nav-link cursor-pointer"
+                  destination="about"
+                >
+                  About
+                </div>
+              </li>
+              <li class="nav-item">
+                <div
+                  class="page-link nav-link cursor-pointer"
+                  destination="portfolio"
+                >
+                  Portfolio
+                </div>
+              </li>
+              <li class="nav-item">
+                <div
+                  class="page-link nav-link cursor-pointer"
+                  destination="contact"
+                >
+                  Contact
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
 
