--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </nav>
 
       <div class="jumbotron jumbotron-fluid"></div>
-      <div class="white-divide"></div>
+      <div id="home-divide" class="white-divide"></div>
     </section>
 
     <section id="about" class="about me" name="about">
