--- a/index.html
+++ b/index.html
@@ -99,73 +99,9 @@
             </div>
 
             <div class="row mt-5">
-                <div class="col-md-6 col-xs-push-6">
-                    <div class="skill__bar__item">
-                        <p>Java 7 ~ 14</p>
-                        <div id="bar1" class="barfiller">
-                            <span class="tip"></span>
-                            <span class="fill" data-percentage="95"></span>
-                        </div>
-                    </div>
-                    <div class="skill__bar__item">
-                        <p>HTML5</p>
-                        <div id="bar2" class="barfiller">
-                            <span class="tip"></span>
-                            <span class="fill" data-percentage="80"></span>
-                        </div>
-                    </div>
-                    <div class="skill__bar__item">
-                        <p>CSS3</p>
-                        <div id="bar3" class="barfiller">
-                            <span class="tip"></span>
-                            <span class="fill" data-percentage="70"></span>
-                        </div>
-                    </div>
-                    <div class="skill__bar__item">
-                        <p>JavaScript ES6</p>
-                        <div id="bar4" class="barfiller">
-                            <span class="tip"></span>
-                            <span class="fill" data-percentage="90"></span>
-                        </div>
-                    </div>
-                    <div class="skill__bar__item">
-                        <p>Python 3.x</p>
-                        <div id="bar5" class="barfiller">
-                            <span class="tip"></span>
-                            <span class="fill" data-percentage="75"></span>
-                        </div>
-                    </div>
-                    <div class="skill__bar__item">
-                        <p>Oracle SQL</p>
-                        <div id="bar6" class="barfiller">
-                            <span class="tip"></span>
-                            <span class="fill" data-percentage="80"></span>
-                        </div>
-                    </div>
-                    <div class="skill__bar__item">
-                        <p>Struts</p>
-                        <div id="bar7" class="barfiller">
-                            <span class="tip"></span>
-                            <span class="fill" data-percentage="85"></span>
-                        </div>
-                    </div>
-                    <div class="skill__bar__item">
-                        <p>Spring Boot</p>
-                        <div id="bar8" class="barfiller">
-                            <span class="tip"></span>
-                            <span class="fill" data-percentage="85"></span>
-                        </div>
-                    </div>
-                    <div class="skill__bar__item">
-                        <p>Bootstrap</p>
-                        <div id="bar9" class="barfiller">
-                            <span class="tip"></span>
-                            <span class="fill" data-percentage="70"></span>
-                        </div>
-                    </div>
-                </div>
+                <div id="skill-bars" class="col-md-6 col-xs-6 col-xs-pull-6"></div>
 
-                <div class="col-md-6 col-xs-pull-6">
+                <div class="col-md-6 col-xs-6 col-xs-push-6">
                     <div class="about--text">
                         <div class="section-title">
                             <h2>Skills</h2>
@@ -340,6 +276,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.0/jquery.waypoints.min.js"></script>
 
     <script src="./src/org/thinkit/githubpages/js/jquery.barfiller.js"></script>
+    <script src="./src/org/thinkit/githubpages/js/barfiller.js"></script>
     <script src="./src/org/thinkit/githubpages/js/pt.min.js"></script>
     <script src="./src/org/thinkit/githubpages/js/index.js"></script>
     <script src="./src/org/thinkit/githubpages/js/shootingStar.js"></script>
