--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <div class="page-link nav-link" destination="home">
+                        <div class="page-link nav-link" destination="shooting-star">
                             Home<span class="sr-only">(current)</span>
                         </div>
                     </li>
