--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
+                <ul class="navbar-nav">
                     <li class="nav-item active">
                         <div class="page-link nav-link" destination="shooting-star">
                             Home<span class="sr-only">(current)</span>
