--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             I'm a Back-End Developer who is specialized in designing and creating Java-based web applications and business improvement tools. I have serious passion for readable and clean code, optimization, easy-to-understand data structure, user-friendly UI and
                             etc.
                         </p>
-                        <div id="contact-me" class="page-link button-color-turquoise" destination="contact">
+                        <div id="contact-me" class="page-link button-color-turquoise hidden-xs" destination="contact">
                             CONTACT ME
                         </div>
                     </div>
@@ -99,8 +99,8 @@
             </div>
 
             <div class="row mt-5">
-                <div id="skill-bars" class="col-md-6 col-xs-6 col-xs-pull-6"></div>
-                <div class="col-md-6 col-xs-6 col-xs-push-6">
+                <div id="skill-bars" class="col-md-6 col-xs-6 order-xs-2"></div>
+                <div class="col-md-6 col-xs-6 order-xs-1">
                     <div class="about--text">
                         <div class="section-title">
                             <h2>Skills</h2>
