--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
             </div>
 
             <div class="row mt-5">
-                <div id="skill-bars" class="col-md-6 col-xs-6 order-xs-2"></div>
-                <div class="col-md-6 col-xs-6 order-xs-1">
+                <div class="col-md-6 order-md-2">
                     <div class="about--text">
                         <div class="section-title">
                             <h2>Skills</h2>
@@ -117,6 +116,7 @@
               </p>
             </div>
           </div>
+          <div id="skill-bars" class="col-md-6 order-md-1"></div>
         </div>
       </div>
     </section>
