--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               </p>
             </div>
           </div>
-          <div id="skill-bars" class="col-md-6 order-md-1"></div>
+          <div id="skill-bars" class="col-md-6 order-md-1 mb-5"></div>
         </div>
       </div>
     </section>
