--- a/index.html
+++ b/index.html
@@ -71,32 +71,45 @@
     <section id="about" class="about me" name="about">
         <div class="container">
             <h1>ABOUT</h1>
-            <div class="header-divide-black-center"></div>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="about--text">
-                        <div class="section-title">
-                            <h2>Kato Shinya</h2>
-                            <h1>About me</h1>
-                        </div>
-                        <p>
-                            I'm a Back-End Developer who is specialized in designing and creating Java-based web applications and business improvement tools. I have serious passion for readable and clean code, optimization, easy-to-understand data structure, user-friendly UI and
-                            etc.
-                        </p>
-                        <div id="contact-me" class="page-link button-color-turquoise hidden-xs" destination="contact">
-                            CONTACT ME
-                        </div>
-                    </div>
+            <div class="header-divide-black-center mb-5"></div>
+
+            <aside class="profile-card">
+                <header>
+                    <a href="https://tutsplus.com">
+                        <img src="./src/org/thinkit/githubpages/img/me.png" />
+                    </a>
+
+                    <h1>Kato Shinya</h1>
+
+                    <h2>- Full Stack Web Developer -</h2>
+                </header>
+
+                <div class="profile-bio">
+                    <p>Hello there!</p>
+                    <p>
+                        I'm a full-stack Web Developer who is specialized in designing and creating Java-based web applications and business improvement tools.
+                    </p>
                 </div>
-                <div class="col-md-6">
-                    <div id="picture-of-me">
-                        <img class="rounded-circle shadow-lg" src="./src/org/thinkit/githubpages/img/about.png" alt="me" />
-                        <p class="my-position">
-                            <strong>Full-Stack Web Developer</strong>
-                        </p>
-                    </div>
-                </div>
-            </div>
+
+                <ul class="profile-social-links">
+                    <li>
+                        <a href="https://twitter.com/tutsplus">
+                            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/social-envato.svg" />
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://envato.com">
+                            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/social-envato.svg" />
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://codepen.io/tutsplus">
+                            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/social-codepen.svg" />
+                        </a>
+                    </li>
+                </ul>
+            </aside>
 
             <div class="row mt-5">
                 <div class="col-md-6 order-md-2">
