--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </aside>
 
             <div class="row mt-5">
-                <div class="col-md-6 order-md-2">
+                <div class="col-md-6">
                     <div class="about--text">
                         <div class="section-title">
                             <h2>Skills</h2>
@@ -129,7 +129,7 @@
               </p>
             </div>
           </div>
-          <div id="skill-bars" class="col-md-6 order-md-1 mb-5"></div>
+          <div id="skill-bars" class="col-md-6 mb-5"></div>
         </div>
       </div>
     </section>
