--- a/index.html
+++ b/index.html
@@ -74,6 +74,62 @@
 
             <div class="header-divide-black-center mb-5"></div>
 
+            <div class="mind-card-wrapper mt-5 mb-5">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="face face1">
+                                <div class="content">
+                                    <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/design_128.png?raw=true" />
+                                    <h3>Design</h3>
+                                </div>
+                            </div>
+                            <div class="face face2">
+                                <div class="content">
+                                    <p>
+                                        dummy
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="face face1">
+                                <div class="content">
+                                    <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/code_128.png?raw=true" />
+                                    <h3>Code</h3>
+                                </div>
+                            </div>
+                            <div class="face face2">
+                                <div class="content">
+                                    <p>
+                                        dummy
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="face face1">
+                                <div class="content">
+                                    <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/launch_128.png?raw=true" />
+                                    <h3>Launch</h3>
+                                </div>
+                            </div>
+                            <div class="face face2">
+                                <div class="content">
+                                    <p>
+                                        dummy
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <aside class="profile-card">
                 <header>
                     <a href="https://tutsplus.com">
@@ -131,68 +187,6 @@
             </div>
           </div>
           <div id="skill-bars" class="col-md-6 mb-5"></div>
-        </div>
-
-        <div class="mind-card-wrapper mt-5 mb-5">
-          <div class="row">
-            <div class="col-md-4">
-              <div class="card">
-                <div class="face face1">
-                  <div class="content">
-                    <img
-                      src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/design_128.png?raw=true"
-                    />
-                    <h3>Design</h3>
-                  </div>
-                </div>
-                <div class="face face2">
-                  <div class="content">
-                    <p>
-                      dummy
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card">
-                <div class="face face1">
-                  <div class="content">
-                    <img
-                      src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/code_128.png?raw=true"
-                    />
-                    <h3>Code</h3>
-                  </div>
-                </div>
-                <div class="face face2">
-                  <div class="content">
-                    <p>
-                      dummy
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card">
-                <div class="face face1">
-                  <div class="content">
-                    <img
-                      src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/launch_128.png?raw=true"
-                    />
-                    <h3>Launch</h3>
-                  </div>
-                </div>
-                <div class="face face2">
-                  <div class="content">
-                    <p>
-                      dummy
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </section>
