--- a/index.html
+++ b/index.html
@@ -162,62 +162,32 @@
           <div id="skill-bars" class="col-md-6 mb-5"></div>
         </div>
 
-        <div class="mind-card-wrapper mt-5 mb-5">
-          <div class="row">
-            <div class="col-md-4">
-              <div class="card">
-                <div class="face face1">
-                  <div class="content">
-                    <img
-                      src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/design_128.png?raw=true"
-                    />
-                    <h3>Design</h3>
-                  </div>
-                </div>
-                <div class="face face2">
-                  <div class="content">
-                    <p>
-                      dummy
-                    </p>
-                  </div>
-                </div>
+        <div class="artboard">
+          <div class="card">
+            <div class="card__side card__side--back">
+              <div class="card__cover">
+                <h4 class="card__heading">
+                  <span class="card__heading-span">Skill Set</span>
+                </h4>
+              </div>
+              <div class="card__details">
+                <ul>
+                  <li>Advanced JS and CSS</li>
+                  <li>JS/CSS Preprocessors</li>
+                  <li>JS Frameworks</li>
+                  <li>Advanced Animations</li>
+                  <li>Deployment Pipelines</li>
+                  <li>Large Apps Architectures</li>
+                  <li>Naming Conventions</li>
+                </ul>
               </div>
             </div>
-            <div class="col-md-4">
-              <div class="card">
-                <div class="face face1">
-                  <div class="content">
-                    <img
-                      src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/code_128.png?raw=true"
-                    />
-                    <h3>Code</h3>
-                  </div>
-                </div>
-                <div class="face face2">
-                  <div class="content">
-                    <p>
-                      dummy
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card">
-                <div class="face face1">
-                  <div class="content">
-                    <img
-                      src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/launch_128.png?raw=true"
-                    />
-                    <h3>Launch</h3>
-                  </div>
-                </div>
-                <div class="face face2">
-                  <div class="content">
-                    <p>
-                      dummy
-                    </p>
-                  </div>
+
+            <div class="card__side card__side--front">
+              <div class="card__theme">
+                <div class="card__theme-box">
+                  <p class="card__subject">Web Developer</p>
+                  <p class="card__title">Hello World!</p>
                 </div>
               </div>
             </div>
