--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <div class="col-md-6">
             <div class="about--text">
               <div class="section-title">
-                <h2>Skills</h2>
+                <h2 class="text-center">Skills</h2>
                 <h1>Experience</h1>
               </div>
               <p>
@@ -162,36 +162,22 @@
           <div id="skill-bars" class="col-md-6 mb-5"></div>
         </div>
 
-        <div class="artboard">
-          <div class="card">
-            <div class="card__side card__side--back">
-              <div class="card__cover">
-                <h4 class="card__heading">
-                  <span class="card__heading-span">Skill Set</span>
-                </h4>
+        <div class="row mt-5">
+          <div class="col-md-12">
+            <div class="about--text">
+              <div class="section-title">
+                <h2 class="text-center">Mind</h2>
+                <h1>My Values</h1>
               </div>
-              <div class="card__details">
-                <ul>
-                  <li>Advanced JS and CSS</li>
-                  <li>JS/CSS Preprocessors</li>
-                  <li>JS Frameworks</li>
-                  <li>Advanced Animations</li>
-                  <li>Deployment Pipelines</li>
-                  <li>Large Apps Architectures</li>
-                  <li>Naming Conventions</li>
-                </ul>
-              </div>
-            </div>
-
-            <div class="card__side card__side--front">
-              <div class="card__theme">
-                <div class="card__theme-box">
-                  <p class="card__subject">Web Developer</p>
-                  <p class="card__title">Hello World!</p>
-                </div>
+              <div class="text-center">
+                <p class="d-inline-block text-left">
+                  Even if you learn a new technology, the underlying mindset
+                  remains the same.<br />Here is a list of my coherent values.
+                </p>
               </div>
             </div>
           </div>
+          <div id="mind-list" class="col-md-6 mb-5"></div>
         </div>
       </div>
     </section>
