--- a/index.html
+++ b/index.html
@@ -171,8 +171,9 @@
               </div>
               <div class="text-center">
                 <p class="d-inline-block text-left">
-                  Even if you learn a new technology, the underlying mindset
-                  remains the same.<br />Here is a list of my coherent values.
+                  Even if I learn a new technology, the underlying important
+                  mindset remains the same.<br />Here is a list of my coherent
+                  values.
                 </p>
               </div>
             </div>
