--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <h1>My Values</h1>
               </div>
               <div class="text-center">
-                <p class="d-inline-block text-left">
+                <p class="d-inline-block text-left mt-3">
                   Even if I learn a new technology, the underlying important
                   mindset remains the same.<br />Here is a list of my coherent
                   values.
