--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
           <div class="profile-bio">
             <p>Hello there!</p>
-            <p>
+            <p class="text-center">
               I'm a full-stack Web Developer who is specialized in designing and
               creating Java-based web applications and business improvement
               tools.
