--- a/index.html
+++ b/index.html
@@ -149,7 +149,13 @@
                 I have been involved in the design and development of various
                 web applications and business improvement tools, mainly in Java.
                 The skill graph is not the whole story of my development, but
-                these are main skills I have.<br /><br /><strong
+                these are main skills I have.<br /><br />
+                I have built a desktop app that uses Python for crawling and
+                scraping. I also have experience developing and releasing
+                Android apps to the Play Store. Basically I design and create
+                Java based web applications, but I am also interested in the
+                Python and Android fields.<br /><br />
+                <strong
                   ><a
                     href="https://github.com/myConsciousness/myConsciousness/blob/master/details/MySkills.md"
                     target="_blank"
@@ -159,7 +165,7 @@
               </p>
             </div>
           </div>
-          <div id="skill-bars" class="col-md-6 mb-5"></div>
+          <div id="skill-bars" class="col-md-6 mt-5 mb-5"></div>
         </div>
 
         <div class="row mt-5">
