--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 I have built a desktop app that uses Python for crawling and
                 scraping. I also have experience developing and releasing
                 Android apps to the Play Store. Basically I design and create
-                Java based web applications, but I am also interested in the
+                Java-based web applications, but I am also interested in the
                 Python and Android fields.<br /><br />
                 <strong
                   ><a
