--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 scraping. I also have experience developing and releasing
                 Android apps to the Play Store. Basically I design and create
                 Java-based web applications, but I am also interested in the
-                Python and Android fields.<br /><br />
+                Python, Android fields and UI design.<br /><br />
                 <strong
                   ><a
                     href="https://github.com/myConsciousness/myConsciousness/blob/master/details/MySkills.md"
@@ -177,9 +177,10 @@
               </div>
               <div class="text-center">
                 <p class="d-inline-block text-left mt-3">
-                  Even if I learn a new technology, the underlying important
-                  mindset remains the same.<br />Here is a list of my coherent
-                  values.
+                  I train every day no matter the field, but I have a coherent
+                  and unchanging philosophy for software development. I can't
+                  always follow these philosophies in various aspects of
+                  software development, but I always try to stick to them.
                 </p>
               </div>
             </div>
