--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
     <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/font.css" />
     <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/index.css" />
+    <link
+      rel="stylesheet"
+      href="./src/org/thinkit/githubpages/css/profile-card.css"
+    />
   </head>
 
   <body>
@@ -35,7 +39,7 @@
       <div id="pt" class="canvas"></div>
 
       <div cass="flex height-fix">
-        <div class="button page-link" destination="home">
+        <div class="button page-link fill-button" destination="home">
           WELCOME TO MY WEBSITE
         </div>
       </div>
