--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <aside id="profile-card" class="profile-card">
           <header>
-            <a href="https://tutsplus.com">
+            <a href="https://github.com/myConsciousness">
               <img src="./src/org/thinkit/githubpages/img/me.png" />
             </a>
 
