--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       rel="stylesheet"
       href="./src/org/thinkit/githubpages/css/profile-card.css"
     />
+    <link
+      rel="stylesheet"
+      href="./src/org/thinkit/githubpages/css/sns-color.css"
+    />
   </head>
 
   <body>
@@ -98,7 +102,7 @@
 
         <aside id="profile-card" class="profile-card">
           <header>
-            <a href="https://github.com/myConsciousness">
+            <a href="https://github.com/myConsciousness" target="_blank">
               <img src="./src/org/thinkit/githubpages/img/me.png" />
             </a>
 
@@ -118,25 +122,18 @@
 
           <ul class="profile-social-links">
             <li>
-              <a href="https://twitter.com/tutsplus">
-                <img
-                  src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/social-envato.svg"
-                />
+              <a href="https://github.com/myConsciousness" target="_blank">
+                <div class="color-github fab fa-github"></div>
               </a>
             </li>
             <li>
-              <a href="https://envato.com">
-                <img
-                  src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/social-envato.svg"
-                />
+              <a href="https://instagram.com/thinkit_shinya" target="_blank">
+                <div class="color-instagram fab fa-instagram"></div>
               </a>
             </li>
-
             <li>
-              <a href="https://codepen.io/tutsplus">
-                <img
-                  src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/social-codepen.svg"
-                />
+              <a href="https://twitter.com/thinkit_shinya" target="_blank">
+                <div class="color-twitter fab fa-twitter"></div>
               </a>
             </li>
           </ul>
