--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       rel="stylesheet"
     />
 
+    <link
+      rel="stylesheet"
+      href="./src/org/thinkit/githubpages/css/preloader.css"
+    />
     <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/font.css" />
     <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/index.css" />
     <link
