--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         <aside id="profile-card" class="profile-card">
           <header>
-            <a href="https://github.com/myConsciousness" target="_blank">
+            <a href="https://github.com/myConsciousness">
               <img src="./src/org/thinkit/githubpages/img/me.png" />
             </a>
 
