--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/preloader.css" />
     <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/font.css" />
     <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/index.css" />
+    <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/navigation.css" />
     <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/profile-card.css" />
     <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/sns-logo-color.css" />
     <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/barfiller.css" />
