--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
     </div>
 
     <section id="home" name="home">
-      <nav class="navbar navbar-expand-lg navbar-light flex">
+      <nav class="navbar navbar-expand-lg navbar-light">
         <button
+          id="navbar-toggler"
           class="navbar-toggler"
           type="button"
           data-toggle="collapse"
